--- a/app/src/main/res/layout/activity_base_recycler_view.xml
+++ b/app/src/main/res/layout/activity_base_recycler_view.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_base_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="net.liang.androidbaseapplication.MainActivity">
+    tools:context="net.liang.androidbaseapplication.BaseRecyclerViewActivity">
 
-    <Button
-        android:id="@+id/baseRecyclerViewActivity"
-        android:text="BaseRecyclerViewActivity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <include layout="@layout/layout_recyclerview"/>
+
 </RelativeLayout>
