--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include layout="@layout/toolbar_center"/>
+
     <Button
         android:id="@+id/baseRecyclerViewActivity"
         android:text="Activity列表示例"
