--- a/appbase/src/main/res/layout/toolbar_center_tv.xml
+++ b/appbase/src/main/res/layout/toolbar_center_tv.xml
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:gravity="center"
-                android:textColor="@color/subColorPrimary"
+                android:textColor="@android:color/white"
                 android:clickable="true"
                 android:background="@drawable/shape_toolbar_tv"
                 android:padding="@dimen/space_5"
