--- a/appbase/src/main/res/layout/toolbar_center.xml
+++ b/appbase/src/main/res/layout/toolbar_center.xml
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textColor="@android:color/white"
+                android:textColor="@color/toolbar_tv"
                 android:textSize="@dimen/text_size_20"/>
         </android.support.v7.widget.Toolbar>
 
