--- a/appbase/src/main/res/layout/toolbar_center_tv.xml
+++ b/appbase/src/main/res/layout/toolbar_center_tv.xml
@@ -47,7 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textColor="@android:color/white"
+                android:textColor="@color/toolbar_tv"
                 android:textSize="@dimen/text_size_20"/>
 
             <TextView
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:gravity="center"
-                android:textColor="@android:color/white"
+                android:textColor="@color/toolbar_tv"
                 android:clickable="true"
                 android:background="@drawable/shape_toolbar_tv"
                 android:padding="@dimen/space_5"
