--- a/appbase/src/main/res/color/base_select.xml
+++ b/appbase/src/main/res/color/base_select.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/base_sel" android:state_pressed="true" />
-    <item android:color="@color/base_nor" android:state_pressed="false" />
+    <item android:color="#40000000" android:state_pressed="true" />
+    <item android:color="@android:color/transparent" android:state_pressed="false" />
 </selector>
