--- a/appbase/src/main/res/layout/toolbar_center_tv.xml
+++ b/appbase/src/main/res/layout/toolbar_center_tv.xml
@@ -27,41 +27,55 @@
             app:contentInsetStart="@dimen/space_0"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-            <ImageView
-                android:id="@+id/toolbar_back"
-                android:layout_width="@dimen/space_60"
-                android:layout_height="match_parent"
-                android:paddingRight="@dimen/space_16"
-                android:paddingLeft="@dimen/space_16"
-                android:clickable="true"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                app:srcCompat="@drawable/ic_toolbar_back"
-                android:visibility="gone"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:ellipsize="marquee"
-                android:clickable="true"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textColor="@color/toolbar_tv"
-                android:textSize="@dimen/text_size_20"/>
+                <ImageView
+                    android:id="@+id/toolbar_back"
+                    android:layout_width="@dimen/space_60"
+                    android:layout_height="match_parent"
+                    android:paddingRight="@dimen/space_16"
+                    android:paddingLeft="@dimen/space_16"
+                    android:clickable="true"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    app:srcCompat="@drawable/ic_toolbar_back"
+                    android:visibility="visible"/>
 
-            <TextView
-                android:id="@+id/right_tv"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:gravity="center"
-                android:textColor="@color/toolbar_tv"
-                android:clickable="true"
-                android:background="@drawable/shape_toolbar_tv"
-                android:padding="@dimen/space_5"
-                android:layout_margin="@dimen/space_10" />
+                <TextView
+                    android:ellipsize="marquee"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="@color/toolbar_tv"
+                    android:layout_marginLeft="@dimen/space_100"
+                    android:layout_marginRight="@dimen/space_100"
+                    android:textSize="@dimen/text_size_20"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
+
+                <TextView
+                    android:layout_marginRight="@dimen/space_5"
+                    android:id="@+id/right_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:gravity="center"
+                    android:textColor="@color/toolbar_back"
+                    android:background="@drawable/shape_toolbar_tv"
+                    android:clickable="true"
+                    android:padding="@dimen/space_5"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
+
+
+            </RelativeLayout>
 
         </android.support.v7.widget.Toolbar>
 
