--- a/appbase/src/main/res/layout-v21/toolbar_center_img.xml
+++ b/appbase/src/main/res/layout-v21/toolbar_center_img.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge
+<merge xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -7,7 +7,6 @@
     阴影控制
     app:elevation="@dimen/space_0"
     -->
-
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,8 +33,8 @@
                 android:paddingLeft="@dimen/space_16"
                 android:clickable="true"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                app:srcCompat = "@drawable/ic_toolbar_back"
-                android:visibility="gone"/>
+                app:srcCompat="@drawable/ic_toolbar_back"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/title"
@@ -44,13 +43,16 @@
                 android:layout_gravity="center"
                 android:textColor="@color/toolbar_tv"
                 android:textSize="@dimen/text_size_20"/>
-        </android.support.v7.widget.Toolbar>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/space_4"
-            android:background="@drawable/shape_shadow_top"
-            android:paddingBottom="@dimen/neg_space_4" />
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="@dimen/space_45"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:paddingRight="@dimen/space_16"
+                android:paddingLeft="@dimen/space_16" />
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 </merge>
