--- a/appbase/src/main/res/layout/toolbar_center_img.xml
+++ b/appbase/src/main/res/layout/toolbar_center_img.xml
@@ -10,7 +10,6 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:elevation="@dimen/space_0"
         app:colorControlNormal="@android:color/black">
 
         <!--
@@ -47,13 +46,19 @@
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="@dimen/space_60"
+                android:layout_width="@dimen/space_45"
                 android:layout_height="match_parent"
                 android:layout_gravity="right"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:paddingRight="@dimen/space_16"
                 android:paddingLeft="@dimen/space_16" />
         </android.support.v7.widget.Toolbar>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/space_4"
+            android:background="@drawable/shape_shadow_top"
+            android:paddingBottom="@dimen/neg_space_4" />
 
     </android.support.design.widget.AppBarLayout>
 </merge>
