--- a/appbase/src/main/res/layout/toolbar_center_img.xml
+++ b/appbase/src/main/res/layout/toolbar_center_img.xml
@@ -33,7 +33,8 @@
                 android:paddingLeft="@dimen/space_16"
                 android:clickable="true"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                app:srcCompat="@drawable/ic_toolbar_back"
+                android:src="@mipmap/toolbar_back"
+                android:tag="skin:toolbar_back:src"
                 android:visibility="gone" />
 
             <TextView
