--- a/appbase/src/main/res/layout/toolbar_center_img.xml
+++ b/appbase/src/main/res/layout/toolbar_center_img.xml
@@ -43,6 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:textColor="@color/toolbar_tv"
+                android:tag="skin:toolbar_tv:textColor"
                 android:textSize="@dimen/text_size_20"/>
 
             <ImageView
