--- a/appbase/src/main/res/layout-v21/toolbar_center_tv.xml
+++ b/appbase/src/main/res/layout-v21/toolbar_center_tv.xml
@@ -82,14 +82,7 @@
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
 
-        <TextView
-            android:id="@+id/tv_netWorkInfo"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/space_40"
-            android:background="#FFDCDC"
-            android:text="网咯不给力，请检查网络设置。"
-            android:gravity="center"
-            android:visibility="gone"/>
+        <include layout="@layout/layout_network_info"/>
     </LinearLayout>
 
 </merge>
