支持网络状态更改提示

--- a/appbase/src/main/res/layout/layout_network_info.xml
+++ b/appbase/src/main/res/layout/layout_network_info.xml
@@ -4,23 +4,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/space_45"
-        android:background="#FFDCDC">
+        android:background="#FFDCDC"
+        android:visibility="gone">
 
         <ImageView
             android:padding="@dimen/space_8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/space_40"
+            android:layout_height="@dimen/space_40"
             android:layout_gravity="center"
             android:src="@mipmap/base_img_plaint"/>
 
         <TextView
             android:id="@+id/tv_netWorkInfo"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/space_45"
+            android:layout_height="match_parent"
             android:text="网咯不给力，请检查网络设置。"
             android:textColor="@android:color/black"
-            android:gravity="center_vertical"
-            android:visibility="visible"/>
+            android:gravity="center_vertical" />
     </LinearLayout>
 
 </merge>
